<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/lytParent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    tools:context=".activities.NewEstActivity"
    tools:targetApi="jelly_bean">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:theme="@style/ToolbarTheme"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:title="@string/add_review" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <android.support.v7.widget.AppCompatImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_launcher_high_res" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/txtReviewerIdWrap"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:hint="@string/id"
                android:textColorHint="@color/colorTextBlack"
                app:hintAnimationEnabled="true"
                app:hintEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/txtReviewerId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:textColor="@color/colorTextBlack"
                    android:textSize="15sp"
                    app:backgroundTint="@color/colorPrimary" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/txtEstablishmentNameWrap"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:hint="@string/name_of_establishment"
                android:textColorHint="@color/colorTextBlack"
                app:hintAnimationEnabled="true"
                app:hintEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/txtEstablishmentName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:textColor="@color/colorTextBlack"
                    android:textSize="15sp"
                    app:backgroundTint="@color/colorPrimary" />

            </android.support.design.widget.TextInputLayout>

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:fontFamily="sans-serif"
                android:text="@string/establishment_type"
                android:textColor="@color/colorTextBlack"
                android:textSize="12sp" />

            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/txtEstablishmentType"
                style="@style/Base.Widget.AppCompat.Spinner.Underlined"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:backgroundTint="@color/colorPrimary" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/txtFoodTypeWrap"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:hint="@string/food_type"
                android:textColorHint="@color/colorTextBlack"
                app:hintAnimationEnabled="true"
                app:hintEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/txtFoodType"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:textColor="@color/colorTextBlack"
                    android:textSize="15sp"
                    app:backgroundTint="@color/colorPrimary" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/txtLocationWrap"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:hint="@string/location"
                android:textColorHint="@color/colorTextBlack"
                app:hintAnimationEnabled="true"
                app:hintEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/txtLocation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:textColor="@color/colorTextBlack"
                    android:textSize="15sp"
                    app:backgroundTint="@color/colorPrimary" />

            </android.support.design.widget.TextInputLayout>

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:fontFamily="sans-serif"
                android:text="@string/rating"
                android:textColor="@color/colorTextBlack"
                android:textSize="12sp" />

            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/txtRating"
                style="@style/Base.Widget.AppCompat.Spinner.Underlined"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:backgroundTint="@color/colorPrimary" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btnAdd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/add"
                android:textColor="@android:color/white" />

        </android.support.v7.widget.LinearLayoutCompat>

    </ScrollView>

</android.support.v7.widget.LinearLayoutCompat>